deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gohttpserver
  labels:
    name: gohttpserver
spec:
  rules:
  - host: httpserver.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gohttpserver
            port: 
              number: 80
